--- a/_site.yml
+++ b/_site.yml
@@ -14,6 +14,8 @@ navbar:
       menu:
           - text: "Flexdashboard"
             href: flexdashboard.html
+          - text: "Spatial Dashboard"
+            href: flexdashboard2.html
       href: about.html
     - icon: fa-envelope fa-lg
       href: mailto:<weave333@umn.edu>
